tests/ui/pin_project/private_in_public-enum.stderr
error[E0446]: private type `PrivateEnum` in public interface
  --> $DIR/private_in_public-enum.rs:8:13
   |
8  |     Variant(PrivateEnum),
   |             ^^^^^^^^^^^ can't leak private type
...
11 | enum PrivateEnum {
   | - `PrivateEnum` declared as private

error[E0446]: private type `foo::PrivateEnum` in public interface
  --> $DIR/private_in_public-enum.rs:17:17
   |
17 |         Variant(PrivateEnum),
   |                 ^^^^^^^^^^^ can't leak private type
...
20 |     enum PrivateEnum {
   |     - `foo::PrivateEnum` declared as private

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0446`.
